[package]
name = "kiro-rs"
version = "1.1.30"
edition = "2024"

[profile.release]
lto = "thin"
strip = true

[features]
default = []
# 显式启用才允许打印潜在敏感信息（仅用于排障）
sensitive-logs = []

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }  # IndexMap-backed Value::Object — preserves field order through deserialize→serialize round-trip (required for kiro-cli wire byte-alignment)
serde_cbor = "0.11"   # CBOR 编解码（Web Portal API）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "v5", "fast-rng"] }  # v5 used to derive deterministic agentContinuationId from conversationId (multi-turn stability)
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }  # 图片处理
base64 = "0.22"       # Base64 编解码
